---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: ??.10.2024
  Locale:
    - Russian translation by Shadow_man.
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 26.10.2024
  Bugfixes:
    - Fix startup crash with Spidertron Enhancements.
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 25.10.2024
  Bugfixes:
    - Fix rare case where radar might break if multiple radars are placed in grid.
    - Fix equipment power drain only happening at night.
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 25.10.2024
  Features:
    - Add Radar Equipment